fixed vertical spacing within hexagons

--- a/style.css
+++ b/style.css
@@ -56,11 +56,11 @@ body {
   color: black;
 }
 .topnav a.active {
-  background-color: #ceaf4a;
+	background-color: #f4d981;
   color: white;
 }
 .topnav a.active:hover {
-  background-color: #f4d981;
+	background-color: #ceaf4a;
   color: white;
 }
 
@@ -68,8 +68,8 @@ body {
 	position: relative;
 	z-index: 0;
 	min-height: 100vh;
-	padding-left: 11vw;
-	padding-right: 11vw;
+	padding-left: 5vw;
+	padding-right: 5vw;
 	padding-bottom: 5em;
 	display: flex;
 	flex-wrap: wrap;
@@ -249,6 +249,8 @@ body {
   padding-top:50%;
   font-size: 1.5em;
   z-index: 1;
+  margin-block-start: 0px;
+  margin-block-end: 0;
   -webkit-transform:translate3d(0,-100%,0);
       -ms-transform:translate3d(0,-100%,0);
           transform:translate3d(0,-100%,0);
@@ -264,6 +266,9 @@ body {
 }
 .hex p {
   top: 50%;
+  margin-block-start: 0px;
+  margin-block-end: 0;
+  height:auto;
   padding-bottom:50%;
   -webkit-transform:translate3d(0,100%,0);
       -ms-transform:translate3d(0,100%,0);
